--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 DEBUG=True
 DJANGO_SECRET_KEY='django-insecure-30h!$w))9dcua*d&kjvaiue8x(orjr*rtc2&crot62#fnz))1q'
-DATABASE_NAME='afyadatabase'
+DATABASE_NAME='appdb'
 DATABASE_USER='prototypedave'
 DATABASE_PASSWORD='sitatoa10'
 DATABASE_HOST='localhost'
