--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,19 @@
     "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'"
   },
   "dependencies": {
+    "@preact/preset-vite": "^2.10.0",
+    "@preact/signals": "^2.0.1",
+    "@schedule-x/calendar": "^2.14.3",
+    "@schedule-x/calendar-controls": "^2.14.3",
+    "@schedule-x/drag-and-drop": "^2.14.3",
+    "@schedule-x/event-modal": "^2.14.3",
+    "@schedule-x/event-recurrence": "^2.14.3",
+    "@schedule-x/scroll-controller": "^2.14.3",
+    "@schedule-x/theme-default": "^2.14.3",
+    "@schedule-x/vue": "^2.12.2",
     "axios": "^1.7.9",
     "pinia": "^2.3.0",
+    "preact": "^10.25.4",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "vuex": "^4.1.0"
