--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.2.0",
     "@preact/preset-vite": "^2.10.0",
     "@preact/signals": "^2.0.1",
     "@schedule-x/calendar": "^2.14.3",
