--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "pinia": "^2.3.0",
     "preact": "^10.25.4",
     "vue": "^3.5.13",
+    "vue-multiselect": "^3.1.0",
     "vue-router": "^4.5.0",
     "vuex": "^4.1.0"
   },
